--- a/style/scss/common/variables.scss
+++ b/style/scss/common/variables.scss
@@ -36,17 +36,19 @@ $regularTextColor: #000;
 $mainFontFamily: Arial;
 $secondFontFamily: Georgia;
 
-$normalFontWeight: 400;
+$normalFontWeight: 300;
 $mediumFontWeight: 600;
 
 /* Font Sizes  12 , 24*/ 
-$mainDesctopFontSize: 26px;
-$mainMobileFontSize: 12px;
+$mainDesctopFontSize: 24px;
+$mainMobileFontSize: 13px;
 
 
 $smallFontSize: 0.8rem;
 $normalFontSize: 1rem;
-$mediumFontSize: 1.4rem;
+$mediumFontSize: 1.2rem;
+$largeTextFontSize: 1.5rem;
 
+$smallTitleFontSize: 1.6rem;
 $mediumTitleFontSize: 2rem;
-$largeTitleForntSize: 2.5rem;
+$largeTitleForntSize: 2.4rem;
