--- a/style/scss/style.scss
+++ b/style/scss/style.scss
@@ -5,7 +5,7 @@
 @import './components/banner-benefits.scss';
 @import './components/prices.scss';
 @import './components/about-us.scss';
-@import './components/lead-form.scss';
-@import './components/more-integrations.scss';
-@import './components/attention.scss';
+@import './components/additional-info.scss';
+@import './components/integrations.scss';
+@import './components/disclaimers.scss';
 @import './components/footer.scss';
