--- a/style/scss/components/about-us.scss
+++ b/style/scss/components/about-us.scss
@@ -1,20 +1,20 @@
 .about-us{
     min-height: 90rem;
-    padding: 5rem;
+    padding: 5rem 0;
 
     &__title{
         font-size: $mediumTitleFontSize;
         text-align: center;
         margin: 0 auto 5rem auto;
 
-        width: 50%;
+        width: 40%;
     }
 
-    &__description-row{
-        grid-template-columns: repeat(2, 50%);
+    &__row{
+        grid-template-columns: repeat(2, 45%);
         column-gap: 10%;
 
-        min-height: 35rem;
+        min-height: 40rem;
 
         &:last-child .about-us__schema-diagram{
             grid-template-columns: 55% 15% 30%;
@@ -27,35 +27,42 @@
         }
     } 
 
-    &__description-column {
+    &__column {
         display: grid;
         align-items: center;
     }
 
     &__description-title{
-        font-size: $mediumFontSize;
+        font-size: $smallTitleFontSize;
+        width: 70%;
 
         margin-bottom: 1rem;
     }
 
     &__description-text{
-        font-size: $normalFontSize;
+        font-size: $mediumFontSize;
 
-       margin-bottom: 2rem;
+        margin-bottom: 2rem;
+        line-height: 1.5rem;
+
+        width: 90%;
     }
     /* Schema */
 
     &__schema{
-        background-color: rgb(239, 238, 234);
+        background-color: $bgColor6;
         height: 100%;
-        padding: 2rem;
+        padding: 5rem;
 
         &-diagram{
             grid-template-columns: repeat(auto-fit, 20% 55% 25%);
+            align-self: center;
+            justify-self: center;
+            display: grid;
         }
 
         &-icon{
-            width: $mediumFontSize;
+            width: $largeTextFontSize;
         }
 
         &-small-icon{
@@ -71,7 +78,7 @@
             justify-content: center;
 
             &-container{
-                background-color: white;
+                background-color: $bgColor4;
                 border-radius: 10px;
             }
 
@@ -123,6 +130,33 @@
                 & ul{
                     margin-left: 1rem;
                 }
+            }
+        }
+    }
+    @media (max-width: 900px) {
+        &__title {
+            width: 90%;
+        }
+
+        &__row {
+            grid-template-columns: 1fr;
+            gap: 3rem;
+            min-height: auto;
+        }
+
+        &__column-container {
+            margin-top: 2rem;
+        }
+
+        &__schema{
+            padding: 2rem;
+
+            &-diagram {
+                grid-template-columns: 1fr !important;
+            }
+
+            &-column:last-child &-icon{
+                margin-top: 0rem;
             }
         }
     }
