--- a/style/scss/components/integrations.scss
+++ b/style/scss/components/integrations.scss
@@ -79,6 +79,7 @@
 
         &__column {
             grid-template-columns: repeat(3, 1fr) !important;
+            gap: 0.5rem;
         }
     }
 }
