--- a/style/scss/components/header.scss
+++ b/style/scss/components/header.scss
@@ -1,5 +1,6 @@
 .header{
     position: fixed;
+    z-index: 1000;
 
     width: 100vw;
     padding: 1rem 0px;
@@ -68,7 +69,7 @@
     }
 
     &__menu--active{
-        display: none !important;
+        display: grid !important;
     }
 
     @media (max-width: 900px) {
@@ -86,8 +87,6 @@
             align-self: center;
             justify-self: center;
             grid-area: a;
-
-            //width: 50%;
         }
 
         &__logo{
@@ -96,14 +95,14 @@
         }
 
         &__menu{
-            display: grid;
+            display: none;
             grid-area: c;
 
             margin: 1rem 0;
         }
 
         &__controls{
-            display: block;
+            display: none;
             grid-area: d;
             & > *{
                 text-align: left;
