--- a/style/scss/components/prices.scss
+++ b/style/scss/components/prices.scss
@@ -104,6 +104,7 @@
         text-align: center;
         color: $greyTextColor;
         margin: 1.5rem 0;
+        line-height: 1.5rem;
 
         & span:first-child{
             font-weight: $mediumFontWeight;
