--- a/style/scss/components/banner.scss
+++ b/style/scss/components/banner.scss
@@ -53,7 +53,7 @@
     }
 }
 
-/* MDP laptop */
+/* MDP laptop 
 @include MDP{
     .banner{
         min-height: 81rem;
@@ -62,4 +62,4 @@
             min-height: 26rem;
         }
     }
-}
+} */
