--- a/style/scss/components/banner-benefits.scss
+++ b/style/scss/components/banner-benefits.scss
@@ -59,8 +59,8 @@
 
     &__title{
         position: absolute;
-        bottom: 20rem;
         margin: 2rem;
+        top: 28vw;
 
         font-size: $mediumFontSize;
     }
@@ -108,6 +108,13 @@
         }
     }
 
+      
+    @media (min-width: 2200px){
+        &__title {
+            top: 25rem;
+        }
+    }
+
     @media (max-width: 900px) {
         &__row-2{
             grid-template-areas:
@@ -116,7 +123,6 @@
                 ". . . . . . . ."
                 ". a a a a a a ."
                 ". . . . . . . .";
-
         }
 
         &__row-1 {
@@ -129,7 +135,7 @@
 
         &__title{
             position: relative;
-            bottom: 22rem;
+            top: -75vw;
         }
 
         &__content{
@@ -138,12 +144,12 @@
 
         @media (min-width: 400px){
             &__title{
-                bottom: 24rem;
+                top: -74vw;
             }
         }
     }
 
-    @media (min-height: 940px) and (max-height: 1100px) {
+   @media (min-height: 940px) and (max-height: 1100px) and (max-width: 1200px){
         &__title{
             position: relative;
             bottom: 33rem;
@@ -167,11 +173,4 @@
             }
         } 
     }
-
-    @media (min-width: 3000px){
-        &__title{
-            bottom: 60rem;
-        }
-    }
-   
 }
