--- a/style/scss/common/common.scss
+++ b/style/scss/common/common.scss
@@ -72,6 +72,77 @@ img.lazyload ,  img.lazyestload {
     filter: blur(8px);
 }
 
+.popup {
+    display: none; // Приховуємо попап за замовчуванням
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7); // Темний фон з прозорістю
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+
+    &__content {
+        background-color: white;
+        padding: 2rem;
+        border-radius: 8px;
+        position: relative;
+        width: 90%;
+        max-width: 400px;
+        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    }
+
+    &__close {
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        font-size: 1.5rem;
+        background: none;
+        border: none;
+        cursor: pointer;
+    }
+
+    &__title {
+        margin-bottom: 1.5rem;
+        font-size: 1.5rem;
+        text-align: center;
+    }
+
+    &__form {
+        display: flex;
+        flex-direction: column;
+
+        &__label {
+            margin: 1rem;
+            font-size: 1rem;
+        }
+
+        &__input {
+            margin: 1rem;
+            padding: 0.5rem;
+            font-size: 1rem;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+        }
+
+        &__button {
+            padding: 0.5rem;
+            font-size: 1rem;
+            background-color: #007BFF;
+            color: white;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+
+            &:hover {
+                background-color: #0056b3;
+            }
+        }
+    }
+}
+
 /* Grid system */
 
 .row-column-2 , .row-column-3 , .row-column-4{
